# snapflow

./: .gitignore  .gitmodules  CLAUDE.md  README.md  agent_memory.md
acpx/: COVERAGE.md  Cargo.toml  PHASE6-NOTES.md  README.acp-compatibility.md  README.md  README.native.md  TEST_REPORT.md
acpx/.github/workflows/: ci.yml
acpx/acpx-bridge/: Cargo.toml
acpx/acpx-bridge/src/: lib.rs  resume.rs
acpx/acpx-client/: Cargo.toml
acpx/acpx-client/examples/: basic_session.rs
acpx/acpx-client/src/: gateway.rs  lib.rs  raw.rs  ws.rs
acpx/acpx-client/tests/: gateway_client_test.rs
acpx/acpx-conductor/: Cargo.toml
acpx/acpx-conductor/src/: backoff.rs  demux.rs  framing.rs  lib.rs  process.rs  supervisor.rs  terminal.rs
acpx/acpx-conductor/tests/: supervisor_test.rs
acpx/acpx-core/: Cargo.toml
acpx/acpx-core/src/: admin.rs  agent_relay.rs  agent_state.rs  bridge_sessions.rs  custom_agents.rs  detect.rs  interaction.rs  keystore.rs  launch.rs  lib.rs  lifecycle.rs  mcp_servers.rs  notify.rs  profile.rs  provider.rs  router.rs  session_registry.rs
acpx/acpx-core/tests/: admin_router_test.rs  agents_gateway_native_test.rs  authenticate_test.rs  capability_probe_demux_test.rs  capability_probe_test.rs  client_initialize_test.rs  default_profile_seeding_test.rs  durable_secret_store_test.rs  fs_request_test.rs  gateway_native_coverage_test.rs  idle_scavenger_test.rs  lifecycle_limits_test.rs  lifecycle_reaper_test.rs  live_notification_hub_test.rs  models_list_native_test.rs  permission_request_test.rs  persistence_test.rs  profile_resolution_test.rs  profile_test.rs  prompt_content_passthrough_test.rs  real_claude_terminal_capability_probe.rs  retention_administration_test.rs  router_dispatch_test.rs  router_persistence_test.rs  router_test.rs  session_cancel_test.rs  session_fork_test.rs  session_list_real_shared_test.rs  session_list_real_test.rs  session_load_backend_handshake_timeout_test.rs  session_load_rehydration_test.rs  session_process_isolation_test.rs  session_update_forwarding_test.rs  startup_recovery_demux_test.rs  startup_recovery_test.rs  tenant_process_isolation_test.rs  terminal_request_test.rs
acpx/acpx-proto/: Cargo.toml
acpx/acpx-proto/src/: admin.rs  agent.rs  gateway.rs  jsonrpc.rs  lib.rs  methods.rs  openapi.rs  openrpc.rs  schema.rs  session.rs  validate.rs
acpx/acpx-proto/tests/: openapi_test.rs  openrpc_test.rs  schema_test.rs
acpx/acpx-registry/: Cargo.toml  registry.fallback.json
acpx/acpx-registry/src/: capabilities.rs  capability_cache.rs  index.rs  install.rs  lib.rs
acpx/acpx-registry/tests/: binary_install_real_download_test.rs  fallback_registry.rs  index_fixtures.rs  install_runtime.rs  live_registry.rs
acpx/acpx-server/: Cargo.toml
acpx/acpx-server/src/: config.rs  main.rs  provisioning.rs
acpx/acpx-server/tests/: acp_bridge_binary_test.rs  active_turn_deadline_test.rs  admin_test.rs  agent_request_fs_terminal_relay_test.rs  agent_request_relay_foreign_client_test.rs  agent_request_relay_test.rs  auth_test.rs  binary_self_test.rs  bridge_config_hot_reload_test.rs  concurrency_test.rs  durable_secret_store_binary_test.rs  e2e_agent_lifecycle_harness.rs  e2e_single_agent_test.rs  http_ws_transport_test.rs  multitenant_concurrency_e2e_test.rs  process_reader_demux_cancel_and_live_updates_test.rs  process_reader_demux_concurrency_test.rs  process_reader_demux_relay_and_updates_test.rs  provisioning_binary_test.rs  real_ambient_multi_agent_test.rs  real_claude_bridge_turn_test.rs  real_claude_multi_agent_test.rs  session_cancel_concurrency_test.rs  startup_recovery_test.rs  tenant_isolation_test.rs
acpx/docs/: README.md  architecture.md  development.md  file-structure.md  setup.md
acpx/docs/schema/: README.md  acpx-http.openapi.json  acpx-wire.schema.json  acpx.openrpc.json
acpx/scripts/: e2e_bridge_reconnect_replay.py  e2e_disconnect_resume_matrix.py  e2e_mid_tool_disconnect_resume.py  e2e_raw_ws_resume_probe.py  gen_openapi.sh  gen_openrpc.sh  gen_schema.sh  openhands-acpx-bridge.sh  openhands-acpx-claude.sh  openhands-acpx-codex.sh  self_test.sh
acpx/tests/bridge_integration/: test_stdio_bridge.py
acpx/tests/openhands_integration/: README.md  __init__.py  acp_stdio_client.py  conftest.py  openhands_sdk_driver.py  proc_tree.py  test_openhands_acpx_e2e.py  (+6 more)
panel-rust/: Cargo.toml  build.rs  settings.default.json
panel-rust/docs/: settings-control-inventory.md
panel-rust/src/: agent_bridge.rs  appearance.rs  conversation.rs  dirty.rs  dispatch.rs  editor_detect.rs  effect.rs  effect_executor.rs  external_snapshot.rs  gateway_actor.rs  jsonl_store.rs  lib.rs  list_model.rs  local_terminal.rs  markdown.rs  model.rs  models.rs  msg.rs  permission.rs  protocol_types.rs  send_queue.rs  settings_file.rs  skills_state.rs  state_store.rs  sync.rs  theme.rs  update.rs
panel-rust/tests/: dev_root.slint.template  dev_root_stress.slint.template  execution_plan_coverage.md  gateway_actor_e2e_test.rs  gateway_actor_mcp_agents_e2e_test.rs  gateway_actor_terminal_relay_e2e_test.rs  host_e2e_driver.py  host_e2e_matrix.md  host_e2e_mcp_driver.py  host_e2e_mcp_smoke.sh  host_e2e_smoke.sh  host_vnc_dev.sh  slint_component_e2e_test.rs  slint_mcp_live_ui_e2e_test.rs
panel-rust/ui/: DESIGN_SYSTEM.md  app.slint  chat_area.slint  local_terminal_card.slint  message_card.slint  palette.slint  permission_card.slint  preview.slint  settings_pane_preview.slint  settings_sheet.slint  sidebar.slint  terminal_card.slint  types.slint
rui-acp-client/: Cargo.toml
rui-acp-client/src/: jsonl.rs  lib.rs  session_client.rs
rui-acp-client/tests/: e2e_stdio_agent.rs  jsonl_cache.rs  mock_peer.rs
rui-acpx-client/: Cargo.toml
rui-acpx-client/src/: lib.rs  thread_actor.rs
rui-acpx-client/tests/: gateway_e2e_test.rs  mcp_agents_e2e_test.rs  terminal_relay_e2e_test.rs
sap-rust/: Cargo.toml  README.md
sap-rust/src/: backend.rs  ffi.rs  ffi_backend.rs  framing.rs  lib.rs  main.rs  media_tools.rs  mlt_backend.rs  protocol.rs  server.rs
sap-rust/tests/: doc11_phase_a_full.rs  file_probe.rs  mlt_export_integration.rs  server_integration.rs
(+190 files in other folders)
