[package]
name = "panel-rust"
version = "0.1.0"
edition = "2021"
description = "Real chat-panel crate. Renders a Slint UI (software renderer, CPU pixel buffer) driven by live ACPX gateway session data (via acpx-client directly, see src/gateway_actor.rs), exposed via a C ABI for a Qt QQuickItem to composite. See src/agent_bridge.rs for how the async agent connections are bridged onto panel-rust's single required OS thread, and its module docs for the jsonl cache / live-reload contract."

[dependencies]
slint = { version = "1.9", default-features = false, features = ["renderer-software", "compat-1-2", "std"] }
# Streaming markdown for agent bodies (src/markdown.rs).
pulldown-cmark = "0.12"
textwrap = "0.16"
# Phase 2 (chat-panel-production-ui/execution-plan.md): the former
# rui-acp-client/rui-acpx-client wrapper crates were folded directly
# into this crate (src/protocol_types.rs, src/jsonl_store.rs, src/
# gateway_actor.rs) -- acpx-client is now this crate's only ACP/ACPX SDK
# dependency, used directly rather than through a second crate boundary.
acpx-client = { path = "../acpx/acpx-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time", "io-std"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31"
portable-pty = "0.9"
vt100 = "0.15"
# active_pane_and_editor_view phase: "open with OS default handler"
# fallback for the skill editor's top bar -- checked for an existing
# default-app-opener dependency first (none present), so this is the
# one new dependency rather than hand-rolling per-OS Command branching.
opener = "0.7"

[dev-dependencies]
tempfile = "3"
i-slint-backend-testing = "1.17.1"
# Raw profiles/create + mcp_servers/create HTTP calls in this crate's
# ported real-process e2e tests (tests/gateway_actor_*_e2e_test.rs,
# ported directly from the former rui-acpx-client crate's own test
# suite) -- test-fixture setup only, not a runtime dependency of the
# library itself (see gateway_actor::thread_actor's own doc comment on
# why production code goes through the transport-neutral `Gateway`
# facade, not raw HTTP).
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
slint-build = "1.17.1"

[lib]
name = "panel_rust"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

# Standalone stdio ACP agent, spawned as a real subprocess by this
# crate's own real-process e2e tests (and, at runtime, as the acpx
# gateway's default dev/test backend -- see `agent_bridge::resolve_
# backend_agent_command`) -- ported directly from the former
# `rui-acp-client` crate's own `[[bin]]` of the same name (Phase 2,
# chat-panel-production-ui/execution-plan.md). Not part of this crate's
# public library API.
[[bin]]
name = "rui-mock-agent"
path = "src/bin/mock_agent.rs"

[dependencies.agent-client-protocol]
version = "1.2"
