[package]
name = "panel-rust"
version = "0.1.0"
edition = "2021"
description = "Real chat-panel crate. Renders a Slint UI (software renderer, CPU pixel buffer) driven by live ACPX gateway session data (via acpx-client directly, see src/gateway_actor.rs), exposed via a C ABI for a Qt QQuickItem to composite. See src/agent_bridge.rs for how the async agent connections are bridged onto panel-rust's single required OS thread, and its module docs for the jsonl cache / live-reload contract."

[features]
default = []
# Optional: cargo run --features ui-dev-viewer --bin ui-dev-viewer
ui-dev-viewer = ["dep:slint-interpreter", "dep:spin_on", "dep:notify"]

[dependencies]
slint = { version = "1.9", default-features = false, features = ["renderer-software", "compat-1-2", "std"] }
slint-interpreter = { version = "1.17.1", optional = true, default-features = true, features = ["compat-1-2", "display-diagnostics", "backend-winit", "renderer-femtovg"] }
spin_on = { version = "0.1", optional = true }
notify = { version = "6", optional = true }
# Streaming markdown for agent bodies (src/markdown.rs).
pulldown-cmark = "0.12"
textwrap = "0.16"
# Phase 2 (chat-panel-production-ui/execution-plan.md): the former
# rui-acp-client/rui-acpx-client wrapper crates were folded directly
# into this crate (src/protocol_types.rs, src/jsonl_store.rs, src/
# gateway_actor.rs) -- acpx-client is now this crate's only ACP/ACPX SDK
# dependency, used directly rather than through a second crate boundary.
acpx-client = { path = "../acpx/acpx-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time", "io-std"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31"
portable-pty = "0.9"
vt100 = "0.15"
# active_pane_and_editor_view phase: "open with OS default handler"
# fallback for the skill editor's top bar -- checked for an existing
# default-app-opener dependency first (none present), so this is the
# one new dependency rather than hand-rolling per-OS Command branching.
opener = "0.7"

[target.'cfg(windows)'.dependencies]
# Windows CI runners have no system sqlite3.lib (link.exe: LNK1181 cannot
# open input file 'sqlite3.lib') -- bundled compiles SQLite from source
# instead of dynamically linking, matching Linux/macOS's usual
# system-sqlite behavior in effect without needing a vcpkg/choco install
# step. Linux and macOS are unaffected by this override.
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
i-slint-backend-testing = "1.17.1"
# Raw profiles/create + mcp_servers/create HTTP calls in this crate's
# ported real-process e2e tests (tests/gateway_actor_*_e2e_test.rs,
# ported directly from the former rui-acpx-client crate's own test
# suite) -- test-fixture setup only, not a runtime dependency of the
# library itself (see gateway_actor::thread_actor's own doc comment on
# why production code goes through the transport-neutral `Gateway`
# facade, not raw HTTP).
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
slint-build = "1.17.1"

[lib]
name = "panel_rust"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

# Standalone stdio ACP agent, spawned as a real subprocess by this
# crate's own real-process e2e tests (and, at runtime, as the acpx
# gateway's default dev/test backend -- see `agent_bridge::resolve_
# backend_agent_command`) -- ported directly from the former
# `rui-acp-client` crate's own `[[bin]]` of the same name (Phase 2,
# chat-panel-production-ui/execution-plan.md). Not part of this crate's
# public library API.
[[bin]]
name = "rui-mock-agent"
path = "src/bin/mock_agent.rs"

# Minimal daemon-side ACPX chat verification tool -- see that file's own
# doc comment. Not part of this crate's public library API.
[[bin]]
name = "chat-init-verify"
path = "src/bin/chat_init_verify.rs"

# `skill_injection_verification` phase: a minimal, real MCP (Model Context
# Protocol, distinct from ACP) server exposing discovered skills as
# list_skills/read_skill tools -- what agent_bridge.rs points every
# session's client-supplied `mcpServers` array at. See the binary's own
# module doc comment for the full mechanism.
[[bin]]
name = "skills-mcp-server"
path = "src/bin/skills_mcp_server.rs"

# Dev UI viewer with TextUtil installed (live / @ # filter). Not shipped.
[[bin]]
name = "ui-dev-viewer"
path = "src/bin/ui_dev_viewer.rs"
required-features = ["ui-dev-viewer"]

[dependencies.agent-client-protocol]
version = "1.2"

# Vendored workaround for a real upstream i-slint-renderer-software 1.17.1
# bug: `draw_image_impl`'s SVG-image path divides by the image's reported
# intrinsic size with no zero-guard, producing Infinity/NaN (then a fatal
# euclid::Size2D cast panic) whenever that size is momentarily 0 -- a real,
# reproduced crash in the Qt-hosted real_ffi build (confirmed via a manual
# repro with RUST_BACKTRACE=full: RustPanelItem::paint -> panel_rust_render
# -> ... -> draw_image_impl -> Size2D::cast().unwrap() on None). Because
# this crate builds as a `staticlib` (panic=abort is implicit for that
# crate-type), the panic cannot be caught at the FFI boundary either -- it
# takes down the whole host process. See vendor/i-slint-renderer-software-
# 1.17.1/lib.rs's own comment at the two patched call sites for the exact
# fix (skip drawing that frame instead of dividing by zero). Remove this
# patch once upstream Slint ships an equivalent guard.
[patch.crates-io]
i-slint-renderer-software = { path = "vendor/i-slint-renderer-software-1.17.1" }
