[package]
name = "rui-acp-client"
version = "0.1.0"
edition = "2021"
description = "ACP session client for the chat panel (panel-rust). Wraps the official agent-client-protocol Rust SDK directly -- no dependency on acpx/acpx-client, per memory/rui/gen/plans/chat-panel-acp-rust-sdk.md Decision 4. Owns per-thread agent connections and a jsonl local cache; exposes a narrow API (open/prompt/subscribe/resync) so panel-rust never touches wire-protocol types."

[dependencies]
agent-client-protocol = "1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

# Standalone stdio ACP agent, spawned as a real subprocess by the phase-2
# integration test (tests/e2e_stdio_agent.rs). Not part of the public crate
# API -- exists purely as a test double per chat-panel-acp-rust-sdk.md's
# "any ACP-compliant agent is fine for dev/validation" phased plan.
[[bin]]
name = "rui-mock-agent"
path = "src/bin/mock_agent.rs"
