[package]
name = "rui-acpx-client"
version = "0.1.0"
edition = "2021"
description = "Chat panel's acpx-gateway-backed transport. Talks to a running acpx-server over the real acpx-client HTTP SDK -- full cutover per the chat-panel-acpx-gateway-integration plan (superseding chat-panel-acp-rust-sdk.md's earlier 'decoupled from acpx for now' stance): every panel-rust chat thread now routes through an acpx-server process, none dial an ACP agent subprocess directly. Exposes an AcpxThreadHandle whose method names/shapes deliberately mirror rui-acp-client::ThreadHandle (open_session/send_prompt/list_sessions/shutdown/take_events) so agent_bridge.rs's actor-forwarding loop needed almost no changes for the cutover -- only the transport underneath differs."

[dependencies]
acpx-client = { path = "../acpx/acpx-client" }
# Reused, not duplicated: ChatMessage/MessageKind/AgentEvent are the one
# canonical local message model both transports (direct-ACP and
# acpx-gateway) converge on, so panel-rust/the jsonl cache never have to
# know which transport produced a given message. One-directional
# dependency only (rui-acp-client has no knowledge of this crate or of
# acpx), so this doesn't reintroduce the coupling chat-panel-acp-rust-sdk.md
# Decision 4 avoided -- it only reuses that crate's *data* types.
rui-acp-client = { path = "../rui-acp-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
