[package]
name = "sap-rust"
version = "0.1.0"
edition = "2021"
description = "SAP (Snapshot App Protocol) JSON-RPC 2.0 server layer, per memory/head/gen/rust-fork/02-rust-embedding.md. Ships a MockBackend standing in for the real Qt/C-ABI FFI shim (not yet buildable in this sandbox); the wire protocol, multi-client dispatch, and notification fan-out are real and tested."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time", "test-util"] }

[[bin]]
name = "sap-rust"
path = "src/main.rs"

[lib]
name = "sap_rust"
path = "src/lib.rs"
# `staticlib` is what corrosion links into the shotcut/ CMake build (see
# shotcut/CMakeLists.txt); `rlib` is kept so `cargo build`/`cargo test` from
# this crate on its own (no real_ffi, no CMake involved) keep working exactly
# as before.
crate-type = ["rlib", "staticlib"]

[features]
# Off by default: gates the *declarations* of the future real C-ABI bindings in
# src/ffi.rs. There is no C library to link against in this sandbox yet (see
# README.md) — enabling this feature alone does not link anything; it exists
# so ffi.rs's intended shape can be reviewed/reused once sap_ffi.h/.cpp exist.
real_ffi = []
