[package]
name = "sap-rust"
version = "0.1.0"
edition = "2021"
description = "SAP (Snapshot App Protocol) JSON-RPC 2.0 server layer, per memory/head/gen/rust-fork/02-rust-embedding.md. This binary's default build uses MockBackend (no real media/Qt dependency, for manual/dev testing of the wire protocol). The real production backend is FfiBackend (behind the real_ffi feature), linked into the shotcut Qt binary via corrosion -- see shotcut/CMakeLists.txt and README.md's 'Real FFI' section."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time", "test-util"] }

[[bin]]
name = "sap-rust"
path = "src/main.rs"

[lib]
name = "sap_rust"
path = "src/lib.rs"
# `staticlib` is what corrosion links into the shotcut/ CMake build (see
# shotcut/CMakeLists.txt); `rlib` is kept so `cargo build`/`cargo test` from
# this crate on its own (no real_ffi, no CMake involved) keep working exactly
# as before.
crate-type = ["rlib", "staticlib"]

[features]
# Off by default for this crate's own standalone `cargo build`/`cargo test`
# (no C library to link against on their own). Turned on by
# shotcut/CMakeLists.txt's corrosion_import_crate call, which links this
# crate as a static lib into the real shotcut Qt binary alongside
# shotcut/src/rustbridge/sap_ffi.{h,cpp} -- see README.md's "Real FFI"
# section for what that path actually wires up.
real_ffi = []
