[package]
name = "acpx-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ACPX strict-ACP compatibility bridge policy and virtual-session types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
