[package]
name = "acpx-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ACPX strict-ACP compatibility bridge policy and virtual-session types"

[[bin]]
name = "acpx-acp-bridge"
path = "src/bin/acpx-acp-bridge.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = "0.24"
