[package]
name = "acpx-conductor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Backend ACP agent process supervision (spawn/stop/restart, stdio JSON-RPC framing)"

[dependencies]
acpx-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
