[package]
name = "acpx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "acpx gateway brain: session registry, profiles, providers, router, persistence"

[dependencies]
acpx-proto = { workspace = true }
acpx-conductor = { workspace = true }
acpx-registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
