[package]
name = "acpx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "acpx gateway brain: session registry, profiles, providers, router, persistence"

[features]
default = []
# Marker feature consumed by acpx-server. Keeping recovery code in core lets
# embedded callers opt in without forcing daemon startup policy on them.
startup-session-recovery = []

[dependencies]
acpx-proto = { workspace = true }
acpx-conductor = { workspace = true }
acpx-registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
# Sqlite driver for persistence/ (Phase 2 step 10). Not a workspace
# dependency -- acpx-core is currently the only crate that needs it. See the
# doc comment at the top of src/persistence/mod.rs for why rusqlite (sync +
# spawn_blocking) was picked over sqlx here. `bundled` vendors sqlite itself
# so no system libsqlite3 is required.
rusqlite = { version = "0.31", features = ["bundled"] }
# Encrypted-at-rest secret storage (`durable_secret_and_configuration_store`,
# `acp-gateway-daemon`). AES-256-GCM: a real AEAD cipher, not a hand-rolled
# or base64 stand-in -- see `src/keystore.rs`'s `MasterKeyring` doc comment
# for the local-file key-management tier this backs (with a clear seam to
# swap in a real OS-keychain/KMS provider later without changing callers).
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
