[package]
name = "acpx-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared ACP wire types for acpx (JSON-RPC envelope + session/agent payloads)"

[dependencies]
agent-client-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

[[bin]]
name = "gen-openrpc"
path = "src/bin/gen_openrpc.rs"

[[bin]]
name = "gen-openapi"
path = "src/bin/gen_openapi.rs"
