[package]
name = "acpx-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote ACP adapter registry client (agentclientprotocol.com registry)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
