[package]
name = "acpx-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "acpx daemon entrypoint: transport layer + gateway API"

[[bin]]
name = "acpx-server"
path = "src/main.rs"

# Standalone black-box health-check CLI (see the top-of-file doc comment
# in `src/bin/selftest.rs`) -- a separate publishable binary from this
# same package, not part of the `cargo test` suite.
[[bin]]
name = "acpx-selftest"
path = "src/bin/selftest.rs"

[dependencies]
acpx-proto = { workspace = true }
acpx-core = { workspace = true }
acpx-conductor = { workspace = true }
acpx-registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Real (non-dev) dependency, promoted from dev-dependencies below --
# `src/bin/selftest.rs` makes real HTTP calls against a deployed
# `acpx-server` instance and isn't test-only code.
reqwest = { workspace = true }
# Phase 2 step 11 (HTTP/WS transport): axum gives us a JSON-RPC POST
# endpoint and a WS upgrade endpoint on the same router/listener with
# minimal glue code. `ws` feature enables `axum::extract::ws`.
axum = { version = "0.7", features = ["ws"] }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
# WS client for http_ws_transport_test.rs only -- default features are
# enough since tests only ever connect to our own plaintext ws://
# loopback listener, no TLS involved.
tokio-tungstenite = "0.24"
futures-util = "0.3"
